# yiffy.fun

./: Cargo.toml  build.rs  index.html
.github/workflows/: ci.yml
src/: app.rs  desktop.rs  login.css  main.rs  options.css  tag.css  tag.rs  timers.rs  viewer.css  web.rs  yiff.rs
yiffy-fun/: Cargo.toml  build.rs  index.html
yiffy-fun/src/: app.rs  desktop.rs  main.rs  notice.css  viewer.css  web.rs  yiff.rs
