[package]
name = "yiffy-fun"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/playfulkittykat/yiffy.fun"
rust-version = "1.81"
include = [
    "/.git",
    "/src/",
    "/build.rs",
    "/index.html",
    "/LICENSE.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "desktop" ]
desktop = [ "dioxus/desktop", "dioxus-desktop", "reqwest/default-tls", "rs621/rate-limit", "tokio", "tokio/rt", "bevy_pkv/redb" ]
web = [ "dioxus/web", "dioxus-web", "wasm-bindgen-futures" ]

[dependencies]
bevy_pkv = { version = "0.11.1", default-features = false }
dioxus = { version = "0.5" }
futures = "0.3.31"
serde = { version = "1.0.210", features = [ "derive" ] }
url = "2.5.2"
reqwest = { optional = true, default-features = false, version = "0.11.13" }
wasm-bindgen-futures = { optional = true, version = "0.4.43" }
tokio = { optional = true, version = "1" }
webbrowser = "1.0.2"
base64 = "0.22.0"
lazy_static = "1.5.0"
dioxus-desktop = { version = "0.5", optional = true }
dioxus-web = { version = "0.5", optional = true }
keyboard-types = { version = "0.7.0", default-features = false }

[dependencies.rs621]
default-features = false
git = "https://github.com/nasso/rs621"
rev = "6b9abc6eb94f06afa30e782de6e828ba53811168"

[build-dependencies]
vergen-gix = { version = "1.0.2", default-features = false }
