[package]
name = "yiffy-fun"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/playfulkittykat/yiffy.fun"
rust-version = "1.81"
include = [
    "/.git",
    "/src/",
    "/build.rs",
    "/index.html",
    "/LICENSE.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "desktop" ]
desktop = [ "dioxus/desktop", "dioxus-desktop", "reqwest/default-tls", "tokio", "bevy_pkv/redb" ]
web = [ "dioxus/web", "dioxus-web", "wasm-bindgen-futures", "gloo" ]

[dependencies]
bevy_pkv = { version = "0.11.1", default-features = false }
dioxus = { version = "0.5" }
futures = "0.3.31"
serde = { version = "1.0.210", features = [ "derive" ] }
url = "2.5.2"
reqwest = { optional = true, default-features = false, version = "0.12.8" }
wasm-bindgen-futures = { optional = true, version = "0.4.43" }
tokio = { optional = true, version = "1", features = [ "rt", "time", "macros", "sync" ] }
webbrowser = "1.0.2"
base64 = "0.22.0"
lazy_static = "1.5.0"
dioxus-desktop = { version = "0.5", optional = true }
dioxus-web = { version = "0.5", optional = true }
keyboard-types = { version = "0.7.0", default-features = false }
gloo = { optional = true, version = "0.11.0", default-features = false, features = ["futures", "timers"] }
snafu = { version = "0.8.5", features = ["rust_1_81"] }

[dependencies.rs621]
default-features = false
features = ["rate-limit"]
git = "https://github.com/playfulkittykat/rs621"
rev = "de9be20c497f0412698c8d45598bb3cd00be6cb9"

[build-dependencies]
vergen-gix = { version = "1.0.2", default-features = false }
