[package]
name = "yiffy-fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "desktop" ]
desktop = [ "dioxus/desktop" ]
web = [ "dioxus/web" ]

[dependencies]
bevy_pkv = { version = "0.6.0", default-features = false }
dioxus = "0.2.4"
futures = "0.3.25"
serde = { version = "1.0.151", features = [ "derive" ] }
tokio = { version = "1.23.0", features = [ "rt", "sync" ] }
url = "2.3.1"

[dependencies.rs621]
git = "https://github.com/playfulkittykat/rs621"
branch = "posts"
